--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-    <title>高坂滑稽果的自我介绍</title>
+    <title>FrandreJoestar的自我介绍</title>
 </head>
 <body>
     
@@ -16,21 +16,21 @@
             <div class="logo1">
                 <img src="img/logo.png" alt="" class="logo2">
             </div>
-            <p class="name">高坂滑稽果</p>
+            <p class="name">FrandreJoestar</p>
             
             <div class="slogan" id="slogan">
-                <p class="slogan2" id="slogan2">如果奇迹有颜色，那么一定是橙色！</p>
+                <p class="slogan2" id="slogan2">如果奇迹有颜色，那么一定是蓝色！</p>
             </div>
             <div class="buttons">
                 <button class="button1" onclick="aboutMe()">关于我</button>
-                <button class="button1" onclick="window.open('https://funny233.xyz')">进入博客</button>
-                <button class="button1" onclick="window.open('https://status.funny233.xyz')">服务器状态</button>
+                <button class="button1" onclick="window.open('')">我的网盘</button>
+                <button class="button1" onclick="window.open('')">服务器状态</button>
             </div>
 
             <footer class="footer">
                 <p class="footer2">Openned in <a target="_blank" href="https://github.com/woziji2200/ProfilePage">Github</a></p>
 
-                <p class="footer2">&copy2021 高坂滑稽果 &nbsp 素材来源 <a target="_blank" href="https://card.niconi.co.ni">LL查卡器</a> &nbsp 作者 <a target="_blank" href="https://www.funy233.xyz">高坂滑稽果</a></p>
+                <p class="footer2">&copy2024 FrandreJoestar &nbsp 素材来源 <a target="_blank" href="https://card.niconi.co.ni">LL查卡器</a> &nbsp 作者 <a target="_blank" href="https://b23.tv/KqdPoYZ">FrandreJoestar</a></p>
             </footer>
 
         </div>
